--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,19 +19,19 @@ body {
 
 /* -------------  NAV  ------------- */
 
-.container_nav_footer {
+.nav {
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-bottom: 50px;
 }
 
-.container_nav_footer h1 {
+.nav__h1 {
    font-size: 1.5rem;
    line-height: 5rem;
 }
 
-.container_nav_footer ul {
+.nav__ul {
    display: flex;
    gap: 1rem;
    font-size: 1.3rem;
@@ -39,7 +39,7 @@ body {
 
 /* -------------  PROFILE  ------------- */
 
-.container_foto {
+.profileSection__imgContainer {
    position: relative;
    background: linear-gradient(rgba(7, 19, 7, 0.076), #ffffff1f);
    width: 15rem;
@@ -48,31 +48,31 @@ body {
    margin: auto;
 }
 
-.container_foto img {
+.profileSection__imgContainer img {
    position: relative;
    width: 15rem;
    margin-top: 2rem;
 }
 
-.container_profile {
+.profileSection__apresentacaoContainer {
    margin: 5rem 0 5rem;
    text-align: center;
 }
 
-.container_profile h2 {
+.apresentacaoContainer__h2 {
    font-size: 2rem;
 }
 
-.span_name {
+.apresentacaoContainer__spanName {
    border-bottom: 4px solid var(--border-color);
 }
 
-.container_profile p {
+.apresentacaoContainer__sobreMim {
    margin: 30px 0;
    color: var(--gray);
 }
 
-.container_profile a {
+.profileSection__apresentacaoContainer a {
    text-align: center;
    text-decoration: none;
    color: var(--color-font-body);
@@ -89,13 +89,13 @@ body {
 
 /* -------------  EXPERIENCES ------------- */
 
-.div_experiences {
+.experiencesSection__experiencesContainer {
    font-size: 30px;
    text-align: center;
    margin: 30px;
 }
 
-.div_experiences p {
+.experiencesContainer__expTime {
    font-size: 15px; 
    color: var(--gray);
    text-transform: lowercase;
@@ -103,39 +103,39 @@ body {
 
 /* -------------  PROJECTS  ------------- */
 
-#projects {
+.projectsSection {
    font-size: 25px;
    width: 90%;
    margin: auto;
    margin-top: 5rem;
 }
 
-.container_projetcs{
+.projectsSection__projectsContainer{
    font-size: 20px;
    text-transform: uppercase;
    margin: auto;
    margin-top: 30px;
 }
 
-.container_projetcs img {
+.projectsContainer__containerImg img {
    width: 90%;
    margin-top: 20px;
    border-radius: 5px;
 }
 
-.container_projetcs p {
+.projectsSection__projectsContainer p {
    margin: 10px 0;
    font-size: 25px;
 }
 
-.container_projetcs span {
+.projectsSection__containerSpan span {
    color: var(--gray);
    font-size: 15px;
    margin-right: 10px;
    margin-bottom: 10px;
 }
 
-.container_projetcs a {
+.projectsSection__projectsContainer a {
    text-decoration: none;
    color: var(--color-font-body);
    border-bottom: 3px solid var(--border-color);
@@ -146,7 +146,7 @@ body {
 
 /* -------------  CONTACT  ------------- */
 
-#contact {
+.contactSection {
    background-color: rgba(255, 255, 255, 0.051);
    margin-top: 80px;
    width: 100%;
@@ -154,13 +154,13 @@ body {
    flex-direction: column;
 }
 
-#contact h2 {
+.contactSection__textContato h2 {
    font-size: 40px;
    text-align: center;
    padding: 50px 0 30px;
 }
 
-#contact p {
+.contactSection__textContato p {
    width: 100%;
    text-align: center;
    margin-bottom: 50px;
@@ -168,20 +168,20 @@ body {
    line-height: 25px;
 }
 
-.container_form {
+.contactSection__containerForm {
    padding-bottom: 100px;
    display: flex;
    flex-direction: column;
 }
 
-.container_input{
+.containerForm__inputContainer {
    width: 100%;
    margin: 30px 0;
    position: relative;
    text-align: center;
 }
 
-.container_input label {
+.containerForm__inputContainer label {
    position: absolute;
    top: 1px;
    left: 50px;
@@ -189,7 +189,7 @@ body {
    color: gray;
 }
 
-.input_contact {
+.inputContainer__input {
    width: 90%;
    height: 35px;
    background: none;
@@ -203,19 +203,19 @@ body {
    cursor: pointer;
 }
 
-.input_contact:focus {
+.inputContainer__input:focus {
    border-bottom: 2px solid var(--border-color);
 }
 
-.input_contact:focus ~ label,
-.input_contact:valid ~ label {
+.inputContainer__input:focus ~ label,
+.inputContainer__input:valid ~ label {
    transform: translateY(-20px);
    transition: ease-in .3s;
    font-size: 13px;
    color: var(--border-color);
 }
 
-#contact button {
+.contactSection button {
    background: none;
    border: none;
    color: var(--color-font-body);
@@ -231,6 +231,26 @@ body {
    align-self: center;
 }
 
+/*      FOOTER        */
+
+.contactSection__footer {
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   padding-bottom: 50px;
+}
+
+.footer__h1 {
+   font-size: 1.5rem;
+   line-height: 5rem;
+}
+
+.footer__ul {
+   display: flex;
+   gap: 1rem;
+   font-size: 1.3rem;
+}
+
 /* PAGINA DO OBRIGADO */
 
 .obrigada {
@@ -240,6 +260,9 @@ body {
    flex-direction: column;
    margin-top: 15rem;
    line-height: 60px;
+   text-align: center;
+   margin-left: 20px;
+   margin-right: 20px;
 }
 
 .obrigada h1 {
